force-app/main/default/objects/HAM_Migration_Log__c/HAM_Migration_Log__c.object-meta.xml
<CustomObject>
    <label>Migration Log</label>
    <nameField>
        <label>Migration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>