force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_BT_Count__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Count__c</fullName>
    <description>Number of Blackthorn (conference360) records processed or referenced in this migration log entry.</description>
    <inlineHelpText>Total count of Blackthorn records associated with this migration log entry.</inlineHelpText>
    <label>BT Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>