force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_BT_Event__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Blackthorn (conference360) Event record associated with this migration log entry.</description>
    <inlineHelpText>The Blackthorn event linked to this migration log entry.</inlineHelpText>
    <label>BT Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Migration Logs (BT Event)</relationshipLabel>
    <relationshipName>HAM_Migration_Logs_BT</relationshipName>
    <type>Lookup</type>
</CustomField>