force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Cvent_Count__c.field-meta.xml
<CustomField>
    <fullName>HAM_Cvent_Count__c</fullName>
    <description>Number of Cvent records processed or referenced in this migration log entry.</description>
    <inlineHelpText>Total count of Cvent records associated with this migration log entry.</inlineHelpText>
    <label>Cvent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>