force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Cvent_Event__c.field-meta.xml
<CustomField>
    <fullName>HAM_Cvent_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent Event record associated with this migration log entry.</description>
    <inlineHelpText>The Cvent event linked to this migration log entry.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Migration Logs (Cvent Event)</relationshipLabel>
    <relationshipName>HAM_Migration_Logs_Cvent</relationshipName>
    <type>Lookup</type>
</CustomField>