force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>HAM_Error_Message__c</fullName>
    <description>Full error message returned by Salesforce during the failed upsert operation.</description>
    <inlineHelpText>The Salesforce error detail for this migration failure.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>