force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>HAM_Log_Level__c</fullName>
    <description>Severity level of this migration log entry. Error indicates a failed record, Warning is a non-blocking issue, Pass is a successful migration, and QC Summary is an aggregate review entry.</description>
    <inlineHelpText>Indicates the severity or result of this log entry: Error, Warning, Pass, or QC Summary.</inlineHelpText>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>QC Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>