force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Migration_Date__c</fullName>
    <description>Timestamp of when this error was logged during the migration run.</description>
    <inlineHelpText>The date and time this error was recorded.</inlineHelpText>
    <label>Migration Date</label>
    <type>DateTime</type>
</CustomField>