force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Object_Type__c</fullName>
    <description>The API name of the Salesforce object being migrated (e.g. CventEvents__Event__c). Populated automatically during migration.</description>
    <inlineHelpText>The object type that was being processed when this error occurred.</inlineHelpText>
    <label>Object Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>