force-app/main/default/objects/HAM_Migration_Log__c/fields/HAM_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_Record_Id__c</fullName>
    <description>The 18-character Salesforce ID of the source record that failed during migration.</description>
    <inlineHelpText>The ID of the source record that caused this error. Use it to locate the record in Blackthorn for investigation.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>